# robo_ws

./: README.md  data_odom_persegi.csv  data_odom_persegi_2.csv  imu_data_persegi.csv  imu_data_persegi_2.csv
data/data_imu/: imu_data_lurusbelok.csv
data/data_lidar/: object_tracking_with_obs.csv
data/data_odom/: data_odom_lurusbelok.csv
install/: local_setup.sh  setup.sh
install/bno055/share/bno055/: package.sh
install/joy/lib/joy/: game_controller_node  joy_enumerate_devices  joy_node
install/joy/share/joy/: local_setup.sh  package.sh
install/my_robot_controller/lib/my_robot_controller/: ekf_fusion_node  fusion_node  icp_node  imu_filtered_node  imu_node  imu_raw_data  lidar_node  nav_test_node  obstacle_monitor  odom_filtered_node  odom_node  odom_raw_data  path_listener  path_saver  tracking_object
install/my_robot_controller/share/my_robot_controller/: package.sh
install/nexus/lib/nexus/: icp_node  main_node
install/nexus/share/nexus/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot/lib/robot/: lidar  node_bno  node_bno = robot.node_bno:mainsave_imu  node_keyboard  node_main  node_serial  save_imu  save_odom
install/robot/share/robot/: package.sh  package.xml
install/rplidar_ros/lib/rplidar_ros/: rplidar_client  rplidar_composition  rplidar_node
install/rplidar_ros/share/rplidar_ros/: local_setup.bash  package.sh  (+4 more)
log/: latest_build  latest_list
src/bringup_robot/: CMakeLists.txt  package.xml
src/bringup_robot/config/: ekf.yaml  ekf_imu_config.yaml  ekf_lidar_imu_odom.yaml  ekf_odom.yaml  lidar_ekf.yaml
src/bringup_robot/launch/: demo.launch.py  ekf_node.launch.py  ekf_odom.launch.py  fusion_ekf.launch.py  fusion_lidar_imu_odom.launch.py  lidar_ekf.launch.py  omni_robot.launch.py  robot_gazebo.launch.xml  robot_turtle.launch.py  sensor_daq.launch.py
src/bringup_robot/rviz/: urdf_config.rviz
src/nexus/: CMakeLists.txt  package.xml
src/nexus/src/: main.cpp
src/nexus/src/lidar/: icp_node.cpp
src/robot/: setup.py
src/robot/robot/: node_serial.py  save_odom.py
(+39 files in other folders)
